[package]
authors = [
  "ElasT0ny <elast0ny00@gmail.com>",
  "Devon Bagley <devonbagley@gmail.com>",
]
description = "An asynchronous WAMP implementation"
edition = "2018"
license = "MIT OR Apache-2.0"
name = "wamp_async"
version = "0.4.0-alpha.0"

categories = ["network-programming", "web-programming", "asynchronous"]
documentation = "https://docs.rs/wamp_async"
keywords = ["wamp", "async", "client"]
readme = "README.md"
repository = "https://github.com/elast0ny/wamp_async"

[dependencies]
async-trait = "0.1.73"
futures = "0.3.28"
hex = "0.4.3"
log = "0.4.20"
nacl = "0.5.3"
native-tls = "0.2.11"
quick-error = "2.0.1"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.105"
strum = { version = "0.25.0", features = ["derive"] }
tokio = { version = "1.32.0", features = ["net", "sync", "io-util", "macros"] }
tokio-native-tls = "0.3.1"
tokio-tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.1"

[dev-dependencies]
env_logger = "0.10.0"
lazy_static = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }
